// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LabeledValue Default 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 dbfeTh"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 kVQTc"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Label
    </span>
  </div>
  Value
</div>
`;

exports[`Storyshots Molecules | LabeledValue Integration: LabeledValue secondary currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 dbfeTh"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 kVQTc"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Market value
    </span>
  </div>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
  >
    
    4,672,198
     SEK
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue Integration: LabeledValue title1 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 dbfeTh"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 kVQTc"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Holdings (SEK)
    </span>
  </div>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 fXBiYK"
  >
    
    4,713,119
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue Integration: LabeledValue with custom title 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 dbfeTh"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 kVQTc"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 cHzAen"
    >
      Foo
    </span>
  </div>
  <span
    className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hbYQjk"
  >
    Bar
  </span>
</div>
`;

exports[`Storyshots Molecules | LabeledValue Integration: LabeledValue with negative development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 dbfeTh"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 kVQTc"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Development this year
    </span>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bsBJRz"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <span
          className="Development__StyledDevelopment-hnn1ri-0 dSohiW"
          value={-9.2}
        >
          <span
            aria-hidden={true}
          >
            ▼
          </span>
          
          -9.2
          %
        </span>
      </span>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        
        -4,672,198
         SEK
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | LabeledValue Integration: LabeledValue with positive development and currency 1`] = `
<div
  className="LabeledValue__StyledLabeledValue-hatse2-0 dbfeTh"
>
  <div
    className="LabeledValue__StyledLabel-hatse2-1 kVQTc"
  >
    <span
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 bQFSIv"
    >
      Development this year
    </span>
  </div>
  <div
    className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 bsBJRz"
  >
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <span
          className="Development__StyledDevelopment-hnn1ri-0 fTxyUg"
          value={9.2}
        >
          <span
            aria-hidden={true}
          >
            ▲
          </span>
          +
          9.2
          %
        </span>
      </span>
    </div>
    <div
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        +
        4,672,198
         SEK
      </span>
    </div>
  </div>
</div>
`;
